[tapocontrol] KLAP-Protocol integration
complete code revision

udp-discovery added

light-effects for lightstrips added

Signed-off-by: Christian Wild <christian@wildclan.de>